fix don't scroll on IE

--- a/demo/scroll/scroll.css
+++ b/demo/scroll/scroll.css
@@ -15,6 +15,9 @@ li {
   line-height: 2;
   list-style-type: none;
   text-align: left;
+  /* 以下IE対策 */
+  -ms-user-select: element; /* IE */
+      user-select: element; /* CSS3 */
 }
 li:hover {
   background-color: #DDD;
